@@ -3348,7 +3348,10 @@ function renew_ifaces_and_macs_list() {
 	readarray -t IFACES_AND_MACS < <(ip link | egrep "^[0-9]+" | cut -d ':' -f 2 | awk '{print $1}' | grep lo -v | grep "${interface}" -v)
 	declare -gA ifaces_and_macs
 	for iface_name in "${IFACES_AND_MACS[@]}"; do
-		ifaces_and_macs[${iface_name}]=$(ip link show "${iface_name}" | awk '/link/ {print $2}')
+		mac_item=$(ip link show "${iface_name}" | awk '/link/ {print $2}')
+		if [ -n "${mac_item}" ]; then
+			ifaces_and_macs[${iface_name}]=${mac_item}
+		fi
 	done
 
 	declare -gA ifaces_and_macs_switched
