@@ -2,6 +2,7 @@
 Some code improvements and refactors. Warnings removed based on shellcheck tool
 README.md small modifications
 Fix on language menu selecting greek language
+Fixed problem on renew_ifaces_and_macs_list function when there are interfaces without mac (like some tunnel interfaces)
 
 4.31
 Now optionally on Evil Twin captive portal attack you can choose between to have internet access or to use a "dns trick"
